Refactored data consistency and Authentication logic